# MkDocs-Material-Demo

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: azure-static-web-apps-ashy-sea-033239503.yml  ci.yml
code/: index.html
diagrams/: index.html
docs/: annotations.md  code.md  diagrams.md  grids.md  index.md  lists.md  math.md  media.md  medien.md  tables.md  tags.md
docs/blog/: .authors.yml
docs/blog/posts/: deployment-guide.md  formatting-tips.md  welcome.md
docs/miscellaneous/: admonition.md  buttons.md  contenttabs.md  footnotes.md  formatierung.md  tooltips.md
lists/: index.html
media/: index.html
miscellaneous/admonition/: index.html
miscellaneous/buttons/: index.html
miscellaneous/contenttabs/: index.html
miscellaneous/footnotes/: index.html
miscellaneous/formatierung/: index.html
miscellaneous/tooltips/: index.html
search/: search_index.json
tables/: index.html
tags/: index.html
