[project]
name = "mkdocs-material-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material[recommended,imaging]==9.7.6",
    "mkdocs-glightbox==0.5.2",
    "mkdocs-git-revision-date-localized-plugin==1.5.3",
    "mkdocs-table-reader-plugin==3.1.0",
    "mike==2.2.0",
]

[dependency-groups]
dev = []
